// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile Drawer mobile matches snapshot 1`] = `
<div>
  <div
    class="css-1eimt1b"
    data-testid="side-drawer-mobile"
    open=""
  >
    <div
      class="css-1fozwq5"
    >
      <div
        class="css-5kfpbm"
      >
        <button
          class="chakra-button css-6dt22a"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-xiiwq5"
            fill="currentColor"
            focusable="false"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 352 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="css-8i4x31"
      >
        content
      </div>
    </div>
  </div>
</div>
`;

exports[`matches snapshot 1`] = `
<div>
  <div
    class="css-1fboye3"
    data-testid="side-drawer"
    open=""
  >
    <div
      class="css-1fozwq5"
    >
      <div
        class="css-5kfpbm"
      >
        <button
          class="chakra-button css-6dt22a"
          role="button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-xiiwq5"
            fill="currentColor"
            focusable="false"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 352 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            />
          </svg>
        </button>
      </div>
      <div
        class="css-8i4x31"
      >
        content
      </div>
    </div>
  </div>
</div>
`;
